--- a/_posts/2021-08-24-clase-2-tdd.md
+++ b/_posts/2021-08-24-clase-2-tdd.md
@@ -5,7 +5,8 @@ author: faloi
 categories: [Clases]
 tags: [kotlin, tdd, pruebas]
 videos:
-  - nombre: Encuentro sincrónico del 24 de Agosto
+  - id: CNM4xfympQw
+    nombre: Encuentro sincrónico del 24 de Agosto
   - id: U-U-qiV3P0k
     opcional: true
     nombre: Resolución del ejercicio "Vendedores"
