C2 - configuración del VSCode

--- a/_posts/2021-08-24-clase-2-tdd.md
+++ b/_posts/2021-08-24-clase-2-tdd.md
@@ -21,6 +21,7 @@ lecturas:
   - url: https://surprograma.github.io/libro-disenio-oop/docs/pruebas-automatizadas/elaborar-casos-prueba/
   - url: https://surprograma.github.io/libro-disenio-oop/docs/pruebas-automatizadas/desarrollo-guiado-pruebas/
   - url: https://surprograma.github.io/libro-disenio-oop/docs/kotlin/trabajo-equipo-intellij/
+  - url: https://surprograma.github.io/libro-disenio-oop/docs/typescript/entorno-desarrollo-vscode/
 entrega:
   fecha: "2021-09-06 23:59"
   ejercicios:
